--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ repository = "GitHub daves_dashboard"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sysinfo = "0.27.0"
