--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,5 @@ repository = "GitHub daves_dashboard"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.6.1"
 sysinfo = "0.27.0"
