--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,6 @@ repository = "GitHub daves_dashboard"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.1"
+axum = { version = "0.6.1", features = ["headers", "macros"] }
+serde = { version = "1.0.150", features = ["derive"] }
 sysinfo = "0.27.0"
