--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ repository = "GitHub daves_dashboard"
 axum = { version = "0.6.1", features = ["headers", "macros"] }
 serde = { version = "1.0.150", features = ["derive"] }
 sysinfo = "0.27.0"
+tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
