--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,9 @@ repository = "https://github.com/dave42w/daves_dashboard/"
 
 [dependencies]
 axum = { version = "0.6.1", features = ["headers", "macros"] }
+dotenvy = "0.15.6"
 handlebars = { version = "4.3.5", features = ["dir_source"] }
+once_cell = "1.16.0"
 serde = { version = "1.0.150", features = ["derive"] }
 sysinfo = "0.27.0"
 tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
